<?xml version="1.0"?>
<package format="2">
  <name>kamayuc_planning</name>
  <version>0.1.0</version>
  <description>The kamayuc planning package for ERC-2021 contest</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Kamayuc@todo.todo">Kamayuc</maintainer>


  <license>TODO</license>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
